small error in learning notebook

--- a/0D_ann_learning.ipynb
+++ b/0D_ann_learning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on the GPU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "  device = torch.device('cuda:0')\n",
@@ -913,7 +905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_fitness(df_exact, df_nn):\n",
+    "def compute_fitness(list_test_results):\n",
     "\n",
     "    # Results will be stored in data_errors array.\n",
     "    # The first column corresponds to errors on temperature\n",
@@ -965,7 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_errors = compute_fitness(df_exact, df_nn)"
+    "data_errors = compute_fitness(list_test_results)"
    ]
   },
   {
@@ -1263,7 +1255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_errors_soft_cst = compute_fitness(df_exact, df_nn)"
+    "data_errors_soft_cst = compute_fitness(list_test_results)"
    ]
   },
   {
