--- a/0D_ann_learning.ipynb
+++ b/0D_ann_learning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Machine learning applied to 0D reactors\n",
     "\n",
-    "In this notebook, we will train neural networks to replace the CVODE solver of CANTERA. We will use the databases generated in the *0D_database_generation.ipynb* notebook."
+    "In this notebook, we will train artificial neural networks (ANNs) to replace the call to the CVODE solver of CANTERA. We will use the databases generated in the *0D_database_generation.ipynb* notebook (make sure that the database is generated and preprocessed properly)."
    ]
   },
   {
@@ -36,7 +36,7 @@
     "import os\n",
     "\n",
     "if use_colab:\n",
-    "    !git clone -b cost_course_exercices https://github.com/cmehl/ML_chem.git\n",
+    "    !git clone -b cost_course_exercices https://github.com/cmehl/COST_lecture.git\n",
     "    \n",
     "    !pip install cantera\n",
     "\n",
@@ -45,10 +45,10 @@
     "    drive.mount('/content/drive')\n",
     "\n",
     "    # Create a folder in the root directory\n",
-    "    if not os.path.isdir(\"/content/drive/MyDrive/ML_chem_data\"):\n",
-    "        !mkdir -p \"/content/drive/MyDrive/ML_chem_data\"\n",
+    "    if not os.path.isdir(\"/content/drive/MyDrive/COST_lecture_data\"):\n",
+    "        !mkdir -p \"/content/drive/MyDrive/COST_lecture_data\"\n",
     "    else:\n",
-    "        print(\"Folder /content/drive/MyDrive/ML_chem_data already exists\")"
+    "        print(\"Folder /content/drive/MyDrive/COST_lecture_data already exists\")"
    ]
   },
   {
@@ -92,9 +92,9 @@
     "sns.set_theme(\"notebook\")\n",
     "\n",
     "if use_colab:\n",
-    "    from ML_chem.chem_ai.cantera_runs import compute_nn_cantera_0D_homo\n",
-    "    from ML_chem.chem_ai.utils import get_molar_mass_atomic_matrix\n",
-    "    from ML_chem.chem_ai.utils import StandardScaler\n",
+    "    from COST_lecture.chem_ai.cantera_runs import compute_nn_cantera_0D_homo\n",
+    "    from COST_lecture.chem_ai.utils import get_molar_mass_atomic_matrix\n",
+    "    from COST_lecture.chem_ai.utils import StandardScaler\n",
     "else:\n",
     "    from chem_ai.cantera_runs import compute_nn_cantera_0D_homo\n",
     "    from chem_ai.utils import get_molar_mass_atomic_matrix\n",
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We set the default pytorch precision to double. It slows down a little bit the training but it is the usual standard for CFD reacting flows applications."
+    "We set the default Pytorch precision to double. It slows down a little bit the training but it is the usual standard for CFD reacting flows applications."
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We identify the device (CPU or GPU) available on the machine. This will be used by pytorch to identify the device on which to train and use the model:"
+    "We identify the device (CPU or GPU) available on the machine. This will be used by Pytorch to identify the device on which to train and use the model:"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "if use_colab:\n",
-    "    folder = \"/content/drive/MyDrive/ML_chem_data/case_0D_highT\"\n",
+    "    folder = \"/content/drive/MyDrive/ML_chem_data/case_0D_test\"\n",
     "else:\n",
     "    folder = \"./case_0D_test\" "
    ]
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We load the parameters stored in the json file of the dabatase folder:"
+    "We load the parameters stored in the json file of the dabatase folder: (please refer to the database generation notebook for the meaning of the parameters)"
    ]
   },
   {
@@ -243,7 +243,10 @@
    "outputs": [],
    "source": [
     "n_in = X_train.shape[1]\n",
-    "n_out = Y_train.shape[1]"
+    "n_out = Y_train.shape[1]\n",
+    "\n",
+    "print(f\"Number of inputs: {n_in}\")\n",
+    "print(f\"Number of outputs: {n_out}\")"
    ]
   },
   {
@@ -252,7 +255,7 @@
    "source": [
     "### Elements conservation matrix\n",
     "\n",
-    "In combustion, elements (usually C, H, O, N) are preserved when a mixture undergoes chemical reactions, as there are no nuclear reactions. Therefore, the initial mass of elements of a mixture is conserved at the next time step and so on. For a 0D reactors (no mixing), elements mass fractions are constant for a given simulation.\n",
+    "In combustion, elements (usually C, H, O, N) are preserved when a mixture undergoes chemical reactions, as there are no nuclear reactions. Therefore, the initial mass of elements of a mixture is conserved at the next time step and so on. For a 0D reactors (no mixing), elements mass fractions are constant for a given simulation. We briefly recall here the material presented in the lecture slides.\n",
     "\n",
     "For a given element $j \\in {C, H, O, N}$, the mass fraction of this elements can be expressed as:\n",
     "\n",
@@ -266,13 +269,13 @@
     "Y_e = \\mathcal{A} Y\n",
     "$$\n",
     "\n",
-    "where $Y_e \\in \\mathbb{R}^4$ is the vector of elements mass fractions and $Y \\in \\mathbb{R}^{N_S}$ the vector of species mass fractions. The matrix $\\mathcal{A} \\in \\mathbb{R}^{4 \\times N_S}$ is defined be the following coefficients:\n",
+    "where $Y_e \\in \\mathbb{R}^4$ is the vector of elements mass fractions and $Y \\in \\mathbb{R}^{N_S}$ the vector of species mass fractions. The matrix $\\mathcal{A} \\in \\mathbb{R}^{4 \\times N_S}$ is defined by the following coefficients:\n",
     "\n",
     "$$\n",
     "\\mathcal{A}_{jk} = \\frac{M_j}{M_k} n_k^j\n",
     "$$\n",
     "\n",
-    "The matrix $\\mathcal{A}$ can be computed using the function *get_molar_mass_atomic_matrix* given in *utils.py*:\n"
+    "The matrix $\\mathcal{A}$ can be computed using the function *get_molar_mass_atomic_matrix* that is provided in *utils.py*:\n"
    ]
   },
   {
@@ -325,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to deal with the scaler, we decide to extract the mean and standard deviation and write the formula directly when necessary. These quantities are here converted to torch tensors:"
+    "In order to deal with the scaler, we decide to extract the mean and standard deviation and write the formula explicitly when necessary (making the *StandardScaler* class Pytorch-compatible is cumbersome). These quantities are here converted to torch tensors:"
    ]
   },
   {
@@ -417,6 +420,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Feel free to change the number of layers and units in the network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The model is then instantiated and transferred to the GPU if present:"
    ]
   },
@@ -441,13 +451,13 @@
     "\n",
     "+ **n_epochs**: number of passes of entire training dataset through the algorithm.\n",
     "+ **batch_size**: size of the chunks passed to the algorithm at each parameters update.\n",
-    "+ **loss_fn**: loss function. In this we choose the Mean Square Loss (MSE), which is adapted to the regression problem. Assuming that the output of the ANN is $Y_k^n$ (preprocessed mass fractions) and the true value is $Y_k^{n,*}$, the loss reads:\n",
+    "+ **loss_fn**: loss function. In this work we choose the Mean Square Loss (MSE), which is adapted to the regression problem and classical used in this context. Assuming that the output of the ANN is $Y_k^n$ (preprocessed mass fractions) and the true value is $Y_k^{n,*}$, the loss reads:\n",
     "\n",
     "$$ \n",
     "\\mathcal{L} = \\frac{1}{N} \\sum_{i=1}^{N} \\frac{1}{N_S} \\sum_{k=1}^{N_S} \\left( Y_{k,i}^n - Y_{k,i}^{n,*} \\right)^2\n",
     "$$\n",
     "\n",
-    "where $N$ is the number of data points.\n",
+    "where $N$ is the number of data points. Other loss functions (such as MAE) are also available in Pytorch, feel free to test them (go to the [Pytorch website](https://pytorch.org/docs/stable/nn.html) for details)\n",
     "\n",
     "+ **optimizer**: optimization method. We use here the standard Adam method with initial learning rate $lr$."
    ]
@@ -517,7 +527,7 @@
     "            Xbatch = X_train[i:i+batch_size]\n",
     "            y_pred = model(Xbatch)\n",
     "            ybatch = Y_train[i:i+batch_size]\n",
-    "            if need_ini_vals: #used for soft elements constraint later\n",
+    "            if need_ini_vals: # used for soft elements constraint later\n",
     "                loss = loss_fn(y_pred, ybatch, Xbatch[:,1:])\n",
     "            else:\n",
     "                loss = loss_fn(y_pred, ybatch)\n",
@@ -734,7 +744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now want to compute 0D reactors for each conditions in *df_sim_test*. We use here the function *compute_nn_cantera_0D_homo* which is given. It takes as input initial conditions $T_0, \\phi$, the ANN model (with associated scalers), the time step (used for the ANN) and the database parameters. It outputs two dataframes containing the exact simulation and the ANN simulation. These results are concatenated in a list."
+    "We now want to compute 0D reactors for each conditions in *df_sim_test*. We use here the function *compute_nn_cantera_0D_homo* which is provided. It takes as input initial conditions $T_0, \\phi$, the ANN model (with associated scalers), the time step (used for the ANN) and the database parameters. It outputs two dataframes containing (i) the exact simulation and (ii) the ANN simulation. These results are concatenated in a list."
    ]
   },
   {
@@ -861,13 +871,6 @@
     "i_sim = 40\n",
     "spec_to_plot = \"H2O2\"\n",
     "plot_results_sim(i_sim, list_test_results, spec_to_plot)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the ANN run can also check the conservation of mass and elements:"
    ]
   },
   {
@@ -1032,12 +1035,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results must be taken with caution, as the fitness function is not perfect. Amonsgt other potentiel issues we can note:\n",
+    "The results must be taken with caution, as the fitness function is not perfect. Amongst potential issues we can note the fact that when profiles are close to $0$, it can lead to large errors (for example if we predict $10^{-6}$ instead of $10^{-7}$ for a major species). This will artificially increase errors.\n",
     "\n",
-    "+ If the profile are slightly shifted (for example if the ignition delay is mispredicted), it will lead to large errors. A solution could be to add the ignition delay in teh fitness and compute profiles errors in a progress variable space.\n",
-    "+ When profiles are close to $0$, it can lead to large errors (for example if we predict $10^{-6}$ instead of $10^{-7}$ for a major species). This will artificially increase errors.\n",
-    "\n",
-    "Other fitness functions are possible, feel free to implement other ones."
+    "Other fitness functions are possible but not explored here."
    ]
   },
   {
@@ -1051,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the strategy employed above, the ANN model freely predicts the new chemical states without being forced to satisfy any constraints. As already analyzed above, several constraints must be satisfied. First, mass fractions should sum up to $1$:\n",
+    "In the strategy employed above, the ANN model freely predicts the new chemical states without being forced to satisfy any constraints. As already analyzed above and explained in the lecture slides, several constraints must be satisfied. First, mass fractions should sum up to $1$:\n",
     "\n",
     "$$\n",
     "\\sum_{k=1}^{N_S} Y_k = 1\n",
@@ -1320,9 +1320,13 @@
     "\n",
     "+ Variation of the sampling space: extension of the $T_0$ and/or $\\phi$ range, change of the pressure.\n",
     "\n",
-    "+ Change of the sampling method, using the *dt_cvode* option.\n",
+    "+ Change of the number of $(\\phi, T_0)$ samples.\n",
     "\n",
-    "+ Applying methodology with another (bigger) chemical mechanism. The mechanism *mech_ch4_lu30.yaml* is provided, it is a 30 species mechanism for methane ($CH_4$) combustion.\n"
+    "+ Applying methodology with another (bigger) chemical mechanism. The mechanism *mech_ch4_lu30.yaml* is provided, it is a 30 species mechanism for methane ($CH_4$) combustion.\n",
+    "\n",
+    "+ Or any other idea you might have.\n",
+    "\n",
+    "You will see that depending on the problem, making things run might need a few trial and errors step and playing around with hyperparameters.\n"
    ]
   }
  ],
