--- a/0D_database_clustering.ipynb
+++ b/0D_database_clustering.ipynb
@@ -36,7 +36,7 @@
     "import os\n",
     "\n",
     "if use_colab:\n",
-    "    !git clone -b cost_course_exercices https://github.com/cmehl/ML_chem.git\n",
+    "    !git clone -b cost_course_exercices https://github.com/cmehl/COST_lecture.git\n",
     "    !pip install PyDOE\n",
     "    !pip install cantera\n",
     "\n",
@@ -45,10 +45,10 @@
     "    drive.mount('/content/drive')\n",
     "\n",
     "    # Create a folder in the root directory\n",
-    "    if not os.path.isdir(\"/content/drive/MyDrive/ML_chem_data\"):\n",
-    "        !mkdir -p \"/content/drive/MyDrive/ML_chem_data\"\n",
+    "    if not os.path.isdir(\"/content/drive/MyDrive/COST_lecture_data\"):\n",
+    "        !mkdir -p \"/content/drive/MyDrive/COST_lecture_data\"\n",
     "    else:\n",
-    "        print(\"Folder /content/drive/MyDrive/ML_chem_data already exists\")"
+    "        print(\"Folder /content/drive/MyDrive/COST_lecture_data already exists\")"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "if use_colab:\n",
-    "    from ML_chem.chem_ai.utils import StandardScaler\n",
+    "    from COST_lecture.chem_ai.utils import StandardScaler\n",
     "else:\n",
     "    from chem_ai.utils import StandardScaler\n"
    ]
