--- a/0D_ann_learning.ipynb
+++ b/0D_ann_learning.ipynb
@@ -483,11 +483,9 @@
     "\n",
     "*Exercice 1:* Complete the training loop by computing monitoring metrics. Note that these metrics are computed every 10 epochs in order to limit the computational overhead.\n",
     "\n",
-    "1. Compute the validation loss.\n",
+    "1. From the conservation of mass we have $\\sum_{k=1}^{N_S} Y_k = 1$. Compute the mean, min and max of $\\sum_{k=1}^{N_S} Y_k$ over the entire validation dataset. \n",
     "\n",
-    "2. From the conservation of mass we have $\\sum_{k=1}^{N_S} Y_k = 1$. Compute the mean, min and max of $\\sum_{k=1}^{N_S} Y_k$ over the entire validation dataset. \n",
-    "\n",
-    "3. Let us note $Y^{in}$ the mass fraction of species at the input of the ANN and $Y^{out}$ at the output (same for elemental mass fractions which are written $Y_e^{in}$ and $Y_e^{out}$). Elements conservation imposes $Y_e^{in}=Y_e^{out}$ which means $\\mathcal{A}Y^{in}=\\mathcal{A}Y^{out}$. We will consider here the quantity $\\delta Y_e = \\left( \\mathcal{A}Y^{out} - \\mathcal{A}Y^{in} \\right) / \\mathcal{A}Y^{in} \\in \\mathbb{R}^4$. Compute the mean, min and max of this quantity over the entire validation dataset.\n",
+    "2. Let us note $Y^{in}$ the mass fraction of species at the input of the ANN and $Y^{out}$ at the output (same for elemental mass fractions which are written $Y_e^{in}$ and $Y_e^{out}$). Elements conservation imposes $Y_e^{in}=Y_e^{out}$ which means $\\mathcal{A}Y^{in}=\\mathcal{A}Y^{out}$. We will consider here the quantity $\\delta Y_e = \\left( \\mathcal{A}Y^{out} - \\mathcal{A}Y^{in} \\right) / \\mathcal{A}Y^{in} \\in \\mathbb{R}^4$. Compute the mean, min and max of this quantity over the entire validation dataset.\n",
     "\n",
     "We give the following hints:\n",
     "\n",
@@ -495,7 +493,9 @@
     "\n",
     "+ Metric arrays are defined as numpy arrays on CPU to be later plotted on matplotlib. In order to transfer a GPU torch tensor *tensor_torch* to a CPU numpy array you can use: *tensor_torch.detach().cpu().numpy()*.\n",
     "\n",
-    "+ Matrix multiplication in pytorch can be done using the *torch.matmul* function and transpose by using *torch.transpose*."
+    "+ Matrix multiplication in pytorch can be done using the *torch.matmul* function and transpose by using *torch.transpose*.\n",
+    "\n",
+    "+ Think about the dimensions of the tensors you are trying to multiply. Sometimes the transpose can be useful."
    ]
   },
   {
@@ -549,28 +549,37 @@
     "                else:\n",
     "                    val_loss = loss_fn(y_val_pred, Y_val)\n",
     "\n",
+    "                ### TO COMPLETE ###\n",
     "                # SUM OF MASS FRACTION\n",
     "                #Inverse scale done by hand to stay with Torch arrays\n",
-    "                yk = Yscaler_mean + (Yscaler_std + 1e-7)*y_val_pred\n",
-    "                if log_transform:\n",
-    "                    yk = torch.exp(yk)\n",
-    "                sum_yk = yk.sum(axis=1)\n",
-    "                sum_yk = sum_yk.detach().cpu().numpy()\n",
-    "                stats_sum_yk[epoch//10,0] = sum_yk.mean() \n",
-    "                stats_sum_yk[epoch//10,1] = sum_yk.min()\n",
-    "                stats_sum_yk[epoch//10,2] = sum_yk.max()\n",
+    "                yk = ...\n",
+    "                # Inverting the log\n",
+    "                ...\n",
+    "                # Computing sum of Yk\n",
+    "                sum_yk = ...\n",
     "\n",
+    "                # Getting the statistics\n",
+    "                stats_sum_yk[epoch//10,0] = ...\n",
+    "                stats_sum_yk[epoch//10,1] = ...\n",
+    "                stats_sum_yk[epoch//10,2] = ...\n",
+    "                ### END ###\n",
+    "\n",
+    "                ### TO COMPLETE ###\n",
     "                # ELEMENTS CONSERVATION\n",
-    "                yval_in = Xscaler_mean[1:] + (Xscaler_std[1:] + 1e-7)*X_val[:,1:]\n",
-    "                if log_transform:\n",
-    "                    yval_in = torch.exp(yval_in)\n",
-    "                ye_in = torch.matmul(A_element, torch.transpose(yval_in, 0, 1))\n",
-    "                ye_out = torch.matmul(A_element, torch.transpose(yk, 0, 1))\n",
-    "                delta_ye = (ye_out - ye_in)/(ye_in+1e-10)\n",
-    "                delta_ye = delta_ye.detach().cpu().numpy()\n",
-    "                stats_A_elements[epoch//10, :, 0] = delta_ye.mean(axis=1)\n",
-    "                stats_A_elements[epoch//10, :, 1] = delta_ye.min(axis=1)\n",
-    "                stats_A_elements[epoch//10, :, 2] = delta_ye.max(axis=1)\n",
+    "                # We need to get non transformed ANN input layer\n",
+    "                yval_in = ...\n",
+    "                # Inverting the log\n",
+    "                ...\n",
+    "                # elements vectors\n",
+    "                ye_in = ...\n",
+    "                ye_out = ...\n",
+    "                delta_ye = ... \n",
+    "\n",
+    "                # Statistics\n",
+    "                stats_A_elements[epoch//10, :, 0] = ...\n",
+    "                stats_A_elements[epoch//10, :, 1] = ...\n",
+    "                stats_A_elements[epoch//10, :, 2] = ...\n",
+    "                ### END ###\n",
     "\n",
     "            model.train()   # Back to training mode\n",
     "            val_loss_list[epoch//10] = val_loss\n",
@@ -927,22 +936,28 @@
     "\n",
     "        # Applying log\n",
     "        if log_transform:\n",
+    "            ### TO COMPLETE ###\n",
+    "            # Apply threshold\n",
+    "            ...\n",
     "\n",
-    "            df_exact[df_exact < threshold] = threshold\n",
-    "            df_nn[df_nn < threshold] = threshold\n",
+    "            df_exact.iloc[:, 1:] = ...\n",
+    "            df_nn.iloc[:, 1:] = ...\n",
+    "            ### END ###\n",
     "\n",
-    "            df_exact.iloc[:, 1:] = np.log(df_exact.iloc[:, 1:])\n",
-    "            df_nn.iloc[:, 1:] = np.log(df_nn.iloc[:, 1:])\n",
-    "\n",
+    "        ### TO COMPLETE ###\n",
     "        # Scaling\n",
-    "        data_exact_scaled = (df_exact.values-Xscaler.mean.values)/(Xscaler.std.values+1.0e-7)\n",
-    "        data_nn_scaled = (df_nn.values-Xscaler.mean.values)/(Xscaler.std.values+1.0e-7)\n",
+    "        data_exact_scaled = ...\n",
+    "        data_nn_scaled = ...\n",
     "\n",
-    "        diff_exact_nn = np.abs((data_nn_scaled-data_exact_scaled)/data_exact_scaled)\n",
+    "        # Pointwise error\n",
+    "        diff_exact_nn = ...\n",
     "\n",
-    "        diff_exact_nn = diff_exact_nn.mean(axis=0)\n",
+    "        # Mean over iterations\n",
+    "        diff_exact_nn = ...\n",
     "\n",
-    "        M = diff_exact_nn.mean()\n",
+    "        # Mean over species\n",
+    "        M = ...\n",
+    "        ### END ###\n",
     "\n",
     "        print(f\"Simulation {i_sim} error M = {M}\")\n",
     "\n",
@@ -1001,7 +1016,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i_sim_max = data_errors[:,-1].argmax()\n",
+    "### TO COMPLETE ###\n",
+    "i_sim_max = ...\n",
+    "### END ###\n",
     "print(f\"Simulation with largest error: {i_sim_max}\")\n",
     "print(f\"Error is: {data_errors[:,-1][i_sim_max]} %\")"
    ]
@@ -1082,7 +1099,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Exercice 4:* complete the loss function for mass conservation."
+    "*Exercice 4:* complete the loss function for mass conservation.\n",
+    "\n",
+    "*Hint*: use *torch.mean* in order to get the average of a tensor in Pytorch."
    ]
   },
   {
@@ -1098,19 +1117,28 @@
     "\n",
     "    def forward(self, pred, targets):\n",
     "\n",
-    "        yk = Yscaler_mean + pred * (Yscaler_std+1.0e-7)\n",
+    "        ### TO COMPLETE ###\n",
+    "        # Inverse transform\n",
+    "        yk = ...\n",
     "        if log_transform:\n",
-    "            yk = torch.exp(yk)\n",
-    "        sum_yk = yk.sum(axis=1)\n",
+    "            ...\n",
+    "        # Computing sum of Yks\n",
+    "        sum_yk = ...\n",
     "\n",
-    "        return torch.mean((pred - targets) ** 2) + self.alpha * torch.mean((sum_yk-1.0)**2)"
+    "        # Computing loss\n",
+    "        loss = ...\n",
+    "        ### END ### \n",
+    "\n",
+    "        return loss"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Exercice 5:* complete the loss function for elements conservation."
+    "*Exercice 5:* complete the loss function for elements conservation.\n",
+    "\n",
+    "*Hint*: do not forget to think about the dimensions of the tensors when you multiply them."
    ]
   },
   {
@@ -1126,19 +1154,23 @@
     "\n",
     "    def forward(self, pred, targets, yk_scaled_in):\n",
     "\n",
+    "        ### TO COMPLETE ###\n",
     "        # Elements input\n",
-    "        yk_in = Xscaler_mean[1:] + yk_scaled_in * (Xscaler_std[1:]+1.0e-7)\n",
+    "        yk_in = ...\n",
     "        if log_transform:\n",
-    "            yk_in = torch.exp(yk_in)\n",
-    "        ye_in = torch.matmul(A_element, torch.transpose(yk_in, 0, 1))\n",
+    "            ...\n",
+    "        ye_in = ...\n",
     "\n",
     "        # Elements output\n",
-    "        yk = Yscaler_mean + pred * (Yscaler_std+1.0e-7)\n",
+    "        yk = ...\n",
     "        if log_transform:\n",
-    "            yk = torch.exp(yk)\n",
-    "        ye_out = torch.matmul(A_element, torch.transpose(yk, 0, 1))\n",
+    "            yk = ...\n",
+    "        ye_out = ...\n",
     "\n",
-    "        return torch.mean((pred - targets) ** 2) + self.alpha * torch.mean((ye_out - ye_in) ** 2)"
+    "        loss = ...\n",
+    "        ### END ###\n",
+    "\n",
+    "        return loss"
    ]
   },
   {
