--- a/0D_database_generation.ipynb
+++ b/0D_database_generation.ipynb
@@ -395,19 +395,25 @@
    "source": [
     "threshold = 1.0e-10\n",
     "if log_transform:\n",
-    "    X_train_p[X_train_p < threshold] = threshold\n",
-    "    X_val_p[X_val_p < threshold] = threshold\n",
-    "    #\n",
-    "    Y_train_p[Y_train_p < threshold] = threshold\n",
-    "    Y_val_p[Y_val_p < threshold] = threshold\n",
     "\n",
+    "    ### TO COMPLETE ###\n",
+    "    # Setting threshold on X_train_p and X_val_p\n",
+    "    \n",
+    "\n",
+    "    # Setting threshold on Y_train_p and Y_val_p\n",
+    "\n",
+    "\n",
+    "    ### END ###\n",
+    "\n",
+    "    ### TO COMPLETE ###\n",
     "    # Apply log\n",
     "    # on X_train_p and X_val_p\n",
-    "    X_train_p.iloc[:, 1:] = np.log(X_train_p.iloc[:, 1:])\n",
-    "    X_val_p.iloc[:, 1:] = np.log(X_val_p.iloc[:, 1:])\n",
+    "    \n",
+    "\n",
     "    # on Y_train_p and Y_val_p\n",
-    "    Y_train_p = np.log(Y_train_p)\n",
-    "    Y_val_p = np.log(Y_val_p)"
+    "\n",
+    "\n",
+    "    ### END ###"
    ]
   },
   {
@@ -443,15 +449,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### TO COMPLETE ###\n",
     "Xscaler = StandardScaler()\n",
-    "Xscaler.fit(X_train_p)\n",
-    "X_train_p = Xscaler.transform(X_train_p)\n",
-    "X_val_p = Xscaler.transform(X_val_p)\n",
+    "# Fit the scaler parameters\n",
     "\n",
+    "# Normalize X_train and X_val\n",
+    "X_train_p =  ...\n",
+    "X_val_p = ...\n",
+    "### END ###\n",
+    "\n",
+    "\n",
+    "### TO COMPLETE ###\n",
     "Yscaler = StandardScaler()\n",
-    "Yscaler.fit(Y_train_p)\n",
-    "Y_train_p = Yscaler.transform(Y_train_p)\n",
-    "Y_val_p = Yscaler.transform(Y_val_p)"
+    "# Do the same for the Yscaler\n",
+    "### END ###"
    ]
   },
   {
