--- a/0D_database_generation.ipynb
+++ b/0D_database_generation.ipynb
@@ -417,14 +417,16 @@
     "In the present work, we select the standard scaler. For a given variable $\\psi$, the normalization is:\n",
     "\n",
     "$$\n",
-    "\\psi^n = \\frac{\\psi - \\mu}{\\sigma}\n",
+    "\\psi^n = \\frac{\\psi - \\mu}{\\sigma + 10^{-7}}\n",
     "$$\n",
     "\n",
     "where $\\mu$ is the mean of $\\psi$ and $\\sigma$ its standard deviation. The inverse transform reads:\n",
     "\n",
     "$$\n",
-    "\\psi = \\sigma \\psi^n + \\mu\n",
+    "\\psi = (\\sigma+ 10^{-7}) \\psi^n + \\mu\n",
     "$$\n",
+    "\n",
+    "The $10^{-7}$ value is set to avoid problems when $\\sigma$ is $0$. It is an arbitrary value which should be chosen small. \n",
     "\n",
     "A class *StandardScaler* is defined in the *utils.py* script. It features three functions:\n",
     "\n",
