--- a/0D_ann_learning.ipynb
+++ b/0D_ann_learning.ipynb
@@ -36,7 +36,7 @@
     "import os\n",
     "\n",
     "if use_colab:\n",
-    "    !git clone -b cost_course_exercices https://github.com/cmehl/COST_lecture.git\n",
+    "    !git clone -b main https://github.com/cmehl/COST_lecture.git\n",
     "    \n",
     "    !pip install cantera\n",
     "\n",
