--- a/0D_database_generation.ipynb
+++ b/0D_database_generation.ipynb
@@ -48,7 +48,7 @@
     "import os\n",
     "\n",
     "if use_colab:\n",
-    "    !git clone -b cost_course_exercices https://github.com/cmehl/COST_lecture.git\n",
+    "    !git clone -b main https://github.com/cmehl/COST_lecture.git\n",
     "    !pip install PyDOE\n",
     "    !pip install cantera\n",
     "\n",
